# realm-codegen

./: .gitmodules  Cargo.toml  README.md
src/: main.rs
src/codegen/: config.rs  generator.rs  mod.rs  serializable_ast.rs  template_helpers.rs
templates/napi/: CMakeLists.txt.hbs  arguments.hbs  bind-arguments.hbs  class-header.hbs  class.hbs  constructor-argument-names.hbs  constructor-arguments.hbs  list-argument-names.hbs  type.hbs
templates/node-addon-api/: CMakeLists.txt.hbs  addon.cpp.hbs  bind-arguments.hbs  class.cpp.hbs  class.h.hbs  config.yml  constructor-arguments.hbs  dictionary.h.hbs
templates/ts/: arguments.hbs  class-member.hbs  class.hbs  config.yml  dictionary.hbs  index.hbs  type.hbs
tests/adder/: .gitignore  CMakeLists.txt  adder.webidl  config.yml  package-lock.json  package.json
tests/adder/src/: test.ts
tests/advanced/: CMakeLists.txt  advanced.webidl  config.yml  package-lock.json  package.json
tests/advanced/src/: test.ts
tests/examples/adder/: adder.webidl  config.yml  package.json
tests/examples/adder/src/: index.ts
tests/examples/adder/templates/cpp/: CMakeLists.txt.hbs  addon.hbs  class.hbs
tests/examples/adder/templates/ts/: class-member.hbs  type.hbs
tests/node-jsi/: .gitignore  CMakeLists.txt  package-lock.json  package.json
tests/node-jsi/src/: addon.cpp  index.js
tests/templates/napi/: class-header.hbs  config.yml
tests/templates/ts/: config.yml  index.hbs
