[package]
name = "realm-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.4.0"
handlebars = { version = "4.1.6", features = ["dir_source"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.21"
simple-error = "0.2.3"
# webidl = "0.9.0"
webidl = { path = "../webidl-rs" }
